# python_tetris

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
scripts/: cov  test
src/: __main__.py
src/lib/: event.py  renderer.py  tetris_lib.py  tetromino.py
src/lib/app/: app.py  app_test.py
src/lib/event/: event.py
src/lib/handler/: handler.py
src/lib/renderer/: renderer.py
src/lib/tetromino/: tetromino.py  tetromino_test.py
