[tool.poetry]
name = "python_tetris"
version = "0.1.0"
description = "tetris written in tetris"
authors = ["Author Name <author@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"